<resources>
    <string name="app_name">Tendable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_fail">Login Fail</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="please_enter_new_password">Please enter New Password</string>
    <string name="please_enter_confirm_password">Please enter Confirm Password</string>
    <string name="password_does_not_match">Password Does not match</string>
    <string name="register_successfully">Register Successfully</string>
</resources>