<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment"
        android:padding="16dp"
        android:background="@color/design_default_color_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_margin="16dp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/loginEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:focusable="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/loginPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColorHint="@color/gray"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:focusable="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/loginRegisterNewAccTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/don_t_have_an_account_register"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary_dark"
                android:layout_marginTop="8dp"
                android:padding="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/loginPb"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/gray"
            android:indeterminate="true" />

        <Button
            android:id="@+id/loginLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:backgroundTint="@color/design_default_color_primary"
            android:padding="8sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>