<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.register.RegisterFragment"
        android:background="@color/design_default_color_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center"
            android:text="@string/register"
            android:textStyle="bold"
            android:layout_margin="16dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/registerEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:focusable="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/registerNewPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:focusable="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/registerConfirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:focusable="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/registerPb"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shadowColor="@color/gray"
            android:indeterminate="true" />

        <Button
            android:id="@+id/registerRegisterBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="16sp"
            android:backgroundTint="@color/design_default_color_primary"
            android:padding="8sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>